1998-05-14  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am (CLEANFILES): Remove config.h.

1998-05-12  Samuel Tardieu  <sam@inf.enst.fr>

	* 5?gtplsp.ads: Use pragma Warnings to work around false warnings.

	* Makefile.am: Add prelimary support for cross-compilation.
	Use new constants generation scheme compatible with most
	platforms.
	Regenerate dependencies.

	* s-garfil.adb: Remove unused with of Interfaces.C.

	* s-garrem.adb: Remove unused with of System.Garlic.Types.

	* s-gartcp.adb: Remove unused with of System.Garlic.Name_Table.

	* s-garthi.ads: Use pragma Warnings to work around a GNAT bug.

	* s-garuti.adb: Remove unused with of Interfaces.C.

	* s-rpc.adb: Remove unused with of Ada.Unchecked_Conversion.

	* s-rpc.ads: Remove unused with of System.Storage_Elements.

	* s-stratt.adb: Remove unused with of Interfaces.

1998-05-11  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-parint.ads, s-parint.adb: Move s-painst into s-parint to
	get a fake PCS in gnat.

	* Makefile.am, Makefile.in: Remove s-painst dependencies.

1998-05-06  Laurent Pautet  <pautet@scapin.enst.fr>

	* 5wgtplsp.adb: Use C_Recv and C_Send instead of C_Read and
	C_Write. Fix problem of external names.

	* s-ganobl.adb, s-ganobl.ads, s-gartcp.adb: Switch every
 	occurrence of 'Read' and 'Write' into 'Recv' and 'Send.

	* s-garthi.ads: Reformat C_Recv spec.

1998-05-04  Laurent Pautet  <pautet@scapin.enst.fr>

	* 5wgtplsp.adb: C_Read and C_Write are exported as "read" and
	"write". In fact, they call C_Recv and C_Send with a fourth arg
	equal to 0. This way, we don't have to change the code in s-gartcp.

1998-04-29  Laurent Pautet  <pautet@scapin.enst.fr>

	* Makefile.am, Makefile.in: Fix a glitch concerning target
 	inlining.

1998-04-29  Samuel Tardieu  <sam@inf.enst.fr>

	* s-parint.ads: Define Raise_Program_Error_For_E_4_18 which will
	be called by GNAT if conditions defined in E.4(18) are not met
	when using a RACW.

	* s-parint.adb: Likewise.
