@@ -1,3 +1,7 @@
+1998-05-22  Laurent Pautet  <pautet@scapin.enst.fr>
+
+	* Makefile.am (inlining): Improve failure detection.
+
 1998-05-14  Samuel Tardieu  <sam@inf.enst.fr>
 
 	* Makefile.am (CLEANFILES): Remove config.h.
